# world-tree

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml  config.local.toml  config.toml  consistency  example.toml  rustfmt.toml  utils  x.toml
.github/ISSUE_TEMPLATE/: BUG-FORM.yml  FEATURE-FORM.yml
.github/workflows/: ci.yml  relyance-sci.yml
benches/: tree_data.rs
crates/axum-middleware/: Cargo.toml
crates/axum-middleware/src/: logging.rs
crates/axum_middleware/: Cargo.toml
crates/common/: Cargo.toml
crates/common/src/: lib.rs  metrics.rs  tracing.rs
crates/common/src/test_utilities/: abi.rs  chain_mock.rs  mod.rs
crates/common/src/test_utilities/abi/: MockBridgedWorldID.json  MockStateBridge.json  MockWorldIDIdentityManager.json  WorldIDIdentityManagerMock.json
crates/ethers-throttle/: Cargo.toml
crates/ethers-throttle/src/: lib.rs
crates/sequencer/: Cargo.toml
crates/state_bridge/: Cargo.toml
crates/state_bridge/sol/: MockBridgedWorldID.json  MockStateBridge.json  WorldIDIdentityManagerMock.json
crates/state_bridge/src/: abi.rs  bridge.rs  error.rs  lib.rs  root.rs
crates/state_bridge/tests/: bridge_service.rs
crates/state_bridge/tests/common/: a.sol  abi.rs  chain_mock.rs  mod.rs
crates/test_common/: Cargo.toml
crates/test_common/sol/: MockBridgedWorldID.json  MockStateBridge.json
crates/test_common/src/: abi.rs  chain_mock.rs  lib.rs
crates/tree_availability/: Cargo.toml
crates/tree_availability/src/: abi.rs  error.rs  index_packing.rs  lib.rs  server.rs  tree.rs
crates/tree_availability/src/server/: mod.rs
crates/tree_availability/src/server/middleware/: api_metrics_layer.rs  logging.rs  logging_layer.rs  remove_auth_layer.rs
crates/tree_availability/src/world_tree/: abi.rs  block_scanner.rs  mod.rs  tree_data.rs  tree_updater.rs
crates/tree_availability/tests/: inclusion_proof.rs
crates/tree_state/: Cargo.toml  README.md
crates/tree_state/src/: abi.rs  block_scanner.rs  error.rs  lib.rs  tree.rs  tree_updater.rs
crates/tree_state/src/tree/: builder.rs  canonical.rs  derived.rs  mod.rs
docs/: consistency_check.md  logos_commands.md  logos_framework.json
load-test/: README.md  loadTest.js  script.js
migrations/: 20240823093832_init.sql  20240911130025_add_leaf_updates_index.down.sql  20240911130025_add_leaf_updates_index.up.sql
scripts/: solveforce_variable_unifier.py
src/: abi.rs  block_scanner.rs  db.rs  error.rs  lib.rs  new_db.rs  util.rs
src/db/: data.rs  mod.rs
src/db/data/: b256.rs  h256.rs  hash.rs
src/serde_utils/: url.rs
src/state_bridge/: error.rs  mod.rs  service.rs  transaction.rs
src/tasks/: ingest.rs  mod.rs  observe.rs  update.rs
src/tree/: block_scanner.rs  config.rs  error.rs  identity_tree.rs  inclusion_proof.rs  leaf_updates.rs  mod.rs  multi_tree_cache.rs  newtypes.rs  service.rs  tasks.rs  tree_data.rs  tree_manager.rs  tree_updater.rs
src/tree/service/: cmix.rs  mod.rs
src/tree/tasks/: ingest.rs  mod.rs  observe.rs  update.rs
src/tree/tree_manager/: bridged.rs  canonical.rs  mod.rs
supply-chain/: config.toml
tests/: bridge_service.rs  deploy_contracts.rs  empty_start.rs  full_flow.rs  inclusion_proof.rs  integration.rs  many_batches.rs  missed_event_on_bridged.rs  mmap_cache.rs
tests/common/: mod.rs  test_client.rs
tests/fixtures/integration_contracts/: foundry.toml  run.sh  runMainnet.sh  runRollup.sh
tests/fixtures/integration_contracts/src/: BridgedWorldID.sol  WorldIDIdentityManager.sol
tests/test_client/: mod.rs
