[package]
name = "world-tree"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]

[dependencies]
anyhow = "1.0"
axum = "0.6"
axum-middleware = { path = "crates/axum-middleware" }
clap = { version = "4.4.8", features = [ "derive", "env" ] }
common = { path = "crates/common" }
config = "0.13.4"
criterion = { version = "0.5.1", features = ["async", "async_futures"] }
dotenv = "0.15.0"
ethers = { version = "2.0.10", features = [
    "abigen",
    "ws",
    "ipc",
    "rustls",
    "openssl",
] }
ethers-throttle = { git = "https://github.com/0xKitsune/ethers-throttle.git" }
eyre = "0.6"
futures = "0.3"
governor = "0.6.0"
hex = "0.4"
hyper = { version = "^0.14.27", features = ["server", "tcp", "http1", "http2"] }
metrics = "0.21.1"
rand = { version = "0.8.5", features = ["small_rng"] }
ruint = "1.11.0"
semaphore = { git = "https://github.com/worldcoin/semaphore-rs", branch = "ewoolsey/dynamic-tree", features = [
    "depth_20",
] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0"
take_mut = "0.2.2"
thiserror = "1.0"
tokio = { version = "1.34.0", features = ["sync", "macros", "rt-multi-thread"] }
toml = "0.8"
tracing = "0.1"
url = "2.5.0"

[dev-dependencies]
reqwest = { version = "0.11.22", features = ["json"] }

[[bin]]
name = "tree-availability-service"
path = "bin/tree_availability_service.rs"

[[bench]]
name  = "tree_data"
harness = false


