[package]
name = "world-tree"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]

[dependencies]
anyhow = "1.0"
axum = "0.6"
axum-middleware = { path = "crates/axum-middleware" }
clap = { version = "4.4.8", features = [ "derive", "env" ] }
config = "0.14.0"
criterion = { version = "0.5.1", features = ["async", "async_futures"] }
dotenv = "0.15.0"
ethers = { version = "2.0.10", features = [
    "abigen",
    "ws",
    "ipc",
    "rustls",
    "openssl",
] }
ethers-throttle = { git = "https://github.com/0xKitsune/ethers-throttle.git" }
eyre = "0.6"
futures = "0.3"
governor = "0.6.0"
hex = "0.4"
hyper = { version = "^0.14.27", features = ["server", "tcp", "http1", "http2"] }
metrics = "0.21.1"
opentelemetry = "0.21.0"
opentelemetry-datadog = "0.9.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.10.0"
ruint = "1.11.0"
semaphore = { git = "https://github.com/worldcoin/semaphore-rs", rev = "60a313d72d171f99e8b5b2e28ecd178413b2bb77", features = [
    "depth_20",
] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1.16"
take_mut = "0.2.2"
telemetry-batteries = { git = "https://github.com/worldcoin/telemetry-batteries.git", rev = "802a4f39f358e077b11c8429b4c65f3e45b85959" }
thiserror = "1.0"
tokio = { version = "1.34.0", features = ["sync", "macros", "rt-multi-thread"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3.18"
url = "2.5.0"

[dependencies.xxdk]
git = "https://git.xx.network/elixxir/libxxdk"
rev = "012a945af5f728311abb84399ad3c5d8887a5262"
optional = true

[dev-dependencies]
bytemuck = "1.16.1"
reqwest = { version = "0.11.22", features = ["json"] }
tempfile = "3.10.1"

[[bin]]
name = "world-tree"
path = "bin/world_tree.rs"

[[bench]]
name  = "tree_data"
harness = false

[profile.release]
debug = true
strip = false
