[package]
name = "world-tree"
version = "0.1.0"
edition = "2021"
default-run = "world-tree"

[workspace]
members = ["crates/*"]

[dependencies]
color-eyre = "0.6"
axum = "0.6"
axum-middleware = { path = "crates/axum-middleware" }
app-task = "0.4.0"
clap = { version = "4.4.8", features = ["derive", "env"] }
config = "0.14.0"
criterion = { version = "0.5.1", features = ["async", "async_futures"] }
dotenv = "0.15.0"
ethers = { version = "2.0.10", features = [
    "abigen",
    "ws",
    "ipc",
    "rustls",
    "openssl",
] }
ethers-throttle = { git = "https://github.com/0xKitsune/ethers-throttle.git" }
eyre = "0.6"
futures = "0.3"
governor = "0.6.0"
hex = "0.4"
hyper = { version = "^0.14.27", features = ["server", "tcp", "http1", "http2"] }
maplit = "1.0.2"
metrics = "0.21.1"
opentelemetry = "0.21.0"
opentelemetry-datadog = "0.9.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.10.0"
ruint = "1.11.0"
semaphore = { git = "https://github.com/worldcoin/semaphore-rs", rev = "59b2a0af2e156dafeb15d35b07fc283edb8859f2", features = [
    "depth_20",
] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1.16"
take_mut = "0.2.2"
telemetry-batteries = { git = "https://github.com/worldcoin/telemetry-batteries.git", rev = "802a4f39f358e077b11c8429b4c65f3e45b85959" }
tempfile = "3.10.1"
thiserror = "1.0"
tokio = { version = "1.34.0", features = ["sync", "macros", "rt-multi-thread"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3.18"
url = "2.5.0"
sqlx = { version = "0.8.1", features = ["postgres", "runtime-tokio-native-tls", "migrate", "macros"] }
async-trait = "0.1"
testcontainers = "0.21.1"
futures-core = "0.3.30"
hex-literal = "0.4.1"
indicatif = "0.17.8"
reqwest = { version = "0.11.22", features = ["json"] }
statrs = "0.17.1"


[dev-dependencies]
indoc = "2.0.5"
testcontainers = "0.21.1"
testcontainers-modules = {  version = "0.9.0", features = ["postgres"] }
tokio = { version = "1.34.0", features = [
    "sync",
    "macros",
    "rt-multi-thread",
    "process",
] }

[[bin]]
name = "world-tree"
path = "src/bin/world_tree.rs"

[profile.release]
debug = true
strip = false
