[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "2.0.10", features = [
    "abigen",
    "ws",
    "ipc",
    "rustls",
    "openssl",
] }
eyre = "0.6.8"
serde = "1.0.189"
metrics = "0.21.1"
opentelemetry = "0.20.0"
opentelemetry-datadog = "0.8.0"
tracing = "0.1.40"
tracing-opentelemetry = "0.21.0"