[package]
name = "tree_availability"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde = { version = "1.0.189", features = ["derive"] }

serde_json = "1.0.107"
semaphore = { git = "https://github.com/worldcoin/semaphore-rs", branch = "main", features = [
    "depth_20",
] }
thiserror = "1.0.49"
tracing = "0.1.37"
tokio = { version = "1.32.0", features = ["sync", "macros"] }
take_mut = "0.2.2"
ethers = { version = "2.0.10", features = [
    "abigen",
    "ws",
    "ipc",
    "rustls",
    "openssl",
] }
eyre = "0.6.8"
axum = "0.6.20"
clap = "4.4.6"
hyper = { version = "^0.14.27", features = ["server", "tcp", "http1", "http2"] }
futures = "0.3.28"


[dev-dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
common = {path = "../common"}
