[package]
name = "tree_availability"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
ethers = { version = "2.0.10", features = [
    "abigen",
    "ws",
    "ipc",
    "rustls",
    "openssl",
] }
eyre = "0.6.8"
futures = "0.3.28"
hyper = { version = "^0.14.27", features = ["server", "tcp", "http1", "http2"] }
metrics = "0.21.1"
semaphore = { git = "https://github.com/worldcoin/semaphore-rs", branch = "main", features = [
    "depth_20",
] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
take_mut = "0.2.2"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["sync", "macros"] }
tracing = "0.1.37"

[dev-dependencies]
common = { path = "../common" }
reqwest = { version = "0.11.22", features = ["json"] }
